--- a/css/layout.css
+++ b/css/layout.css
@@ -26,7 +26,7 @@
 
 .col-1 {
   float: left;
- 
+ margin: 5px;
   width: 32%;
 }
 .section .col-2{
@@ -34,7 +34,7 @@
 }
 .col-2 {
   float: left;
-
+  margin: 5px;
   width: 66%;
 }
 
