--- a/css/layout.css
+++ b/css/layout.css
@@ -26,7 +26,7 @@
 
 .col-1 {
   float: left;
-
+margin: 2px;
   width: 31.5%;
 }
 .section .col-2{
@@ -34,7 +34,7 @@
 }
 .col-2 {
   float: left;
-  
+  margin: 2px;
   width: 65.5%;
 }
 
